api/k8s/development/account-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-svc
  template:
    metadata:
      labels:
        app: account-svc
    spec:
      containers:
        - name: account-svc
          image: draplus/account-svc:v0.5.0-beta
          resources:
            limits:
              cpu: 300m
              memory: "300Mi"
            requests:
              cpu: 250m
              memory: "250Mi"
      dnsPolicy: Default
---
apiVersion: v1
kind: Service
metadata:
  name: account-clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: account-svc
  ports:
    - name: account-svc
      protocol: TCP
      port: 5252
      targetPort: 5252
    - name: account-grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
