api/k8s/development/ingress-svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: midraplus-ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx

    # CORS for api setup
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:3000, https://midraplus.netlify.app"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,X-SignalR-User-Agent"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  rules:
    - host: localhost
      http:
        paths:
          # Account service
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: account-clusterip-svc
                port:
                  number: 5252

          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: account-clusterip-svc
                port:
                  number: 5252

          # Admin service
          - path: /api/admin
            pathType: Prefix
            backend:
              service:
                name: admin-clusterip-svc
                port:
                  number: 5244

          # Board service
          - path: /api/board
            pathType: Prefix
            backend:
              service:
                name: board-clusterip-svc
                port:
                  number: 5277

          # Draw service
          - path: /board
            pathType: Prefix
            backend:
              service:
                name: draw-clusterip-svc
                port:
                  number: 5284

          - path: /chat
            pathType: Prefix
            backend:
              service:
                name: draw-clusterip-svc
                port:
                  number: 5284
